# karaoke-lyrics-processor

./: LICENSE  README.md  pyproject.toml  run_tests.py  segment.py
.github/workflows/: publish.yml
karaoke_lyrics_processor/: __init__.py  cli.py  karaoke_lyrics_processor.py
tests/: test_cli.py  test_integration.py  test_karaoke_lyrics_processor.py
